--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
-  "homepage": "https://github.com/YiHeng0221/react-practice.git",
+  "homepage": "https://yiheng0221.github.io/react-practice/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
